lang/macro/tests/ui/fail/10-unknown-function-marker.stderr
error: unknown marker for the liquid function
  --> $DIR/10-unknown-function-marker.rs:12:17
   |
12 |         #[liquid(unknown)]
   |                 ^^^^^^^^^
